<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings_header">

        <EditTextPreference
            app:dialogTitle="What is the patient's name?"
            app:defaultValue="Field Empty"
            app:key="@string/patient_name"
            app:title="Patient Name"
            android:inputType="text"/>

        <EditTextPreference
            app:dialogTitle="What is the carer's name?"
            app:defaultValue="Field Empty"
            app:key="@string/carer_name"
            app:title="Carer Name"
            android:inputType="text"/>

        <EditTextPreference
            app:dialogTitle="What is the carer's phone number?"
            app:defaultValue="0000"
            app:key="@string/carer_phone"
            app:title="Carer Phone Number"
            android:inputType="number"
            />

        <EditTextPreference
            app:dialogTitle="What is the carer's email address?"
            app:defaultValue="Field Empty"
            app:title="Carer Email Address"
            app:summary="@string/carer_email"
            android:inputType="text"/>

        <!-- OLD
        <ListPreference
            app:dialogTitle="Select alignment"
            app:defaultValue="true"
            app:entries="@array/alignment_entries"
            app:entryValues="@array/alignment_values"
            app:key="alignment"
            app:title="@string/alignment_title"
            app:summary="Choose whether the compass points to the magnetic or geometric north" />
        -->
    </PreferenceCategory>

</PreferenceScreen>
